--- a/service-01.html
+++ b/service-01.html
@@ -404,10 +404,13 @@
                                         data-background="https://th.bing.com/th/id/R.c63b7e27dc525d66bdff67b7bed0d649?rik=xn5TQX8cFDkpgg&riu=http%3a%2f%2fillumene.com%2fwp-content%2fuploads%2f2019%2f12%2fVizcaya-Museum-and-Gardens-tent-lighting-twinkle-lights-mini-lights-2000x1334.jpg&ehk=aczLwdPoZo101l9HIqS4zrkzBQNXBhgidSE2VGbo11k%3d&risl=&pid=ImgRaw&r=0"></div>
                                     <div class="service-intro-box d-flex justify-content-xl-end mt-70">
                                         <div class="service-intro-text">
-                                            <span class="line__subtitle mb-30">Since 1988</span>
-                                            <p class="section-intro-paragraph">At Party Store, we specialize in curating unforgettable events that leave lasting impressions.
-                                                From corporate conferences to private celebrations, our passion lies in transforming ideas into
-                                                extraordinary experiences. Trust us to handle every detail with precision, creativity, and care.
+                                            <span class="line__subtitle mb-30">Since 2020</span>
+                                            <p class="section-intro-paragraph">We are a seasoned event management team with over five 
+                                                years of expertise in catering, décor, event hosting. Our passion and deep knowledge 
+                                                ensure seamless, unforgettable experiences tailored to your vision. With a proven track 
+                                                record of successful events, we bring a wealth of practical experience and creative solutions 
+                                                to every project. We are dedicated to understanding your unique needs and transforming them 
+                                                into a flawlessly executed and truly memorable occasion.
                                             </p>
                                         </div>
                                     </div>
@@ -443,6 +446,11 @@
                                             <a href="cart.html" class="radius-btn border-black"><span
                                                     class="btn-text">Book a Service</span><span class="btn-icon"><i
                                                         class="flaticon-next"></i></span></a>
+                                                        <style>
+                                                            .radius-btn .border-black :hover{
+                                                                background: #FFD700;
+                                                            }
+                                                        </style>
                                         </div>
                                     </div>
                                     <div class="col-xxl-6 col-xl-6 col-lg-6">
@@ -604,7 +612,7 @@
                                         <div class="section__subtitle-icon">
                                             <img src="assets/img/shapes/section-title-star.png" alt="image not found">
                                         </div>
-                                        <p class="section__subtitle-text">
+                                        <p class="section__subtitle-text"  style="color: #FFD700 !important;">
                                             Awesome Clients Feeback
                                         </p>
                                     </div>
@@ -615,10 +623,10 @@
                             <div class="col-lg-4">
                                 <div class="testimonial__nav mb-20 d-flex justify-content-lg-end">
                                     <div class="testimonial-slider-button-prev circle-nav-btn">
-                                        <i class="fa-light fa-arrow-left-long"></i>
+                                        <i class="fa-light fa-arrow-left-long" style="color: #FFD700;"></i>
                                     </div>
                                     <div class="testimonial-slider-button-next circle-nav-btn">
-                                        <i class="fa-light fa-arrow-right-long"></i>
+                                        <i class="fa-light fa-arrow-right-long"  style="color: #FFD700;"></i>
                                     </div>
                                 </div>
                             </div>
@@ -651,7 +659,7 @@
                                                                     </svg>
                                                                 </div>
                                                                 <p>From start to finish, the team handled everything with such care. Our engagement party was more magical than we ever imagined!</p>
-                                                                <span class="author__name">Aarav Menon</span>
+                                                                <span class="author__name" style="color: #FFD700;">Aarav Menon</span>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -680,7 +688,7 @@
                                                                     </svg>
                                                                 </div>
                                                                 <p>They truly listened to what we wanted and delivered it with finesse. Highly professional and incredibly warm!</p>
-                                                                <span class="author__name">Neha Sharma</span>
+                                                                <span class="author__name" style="color: #FFD700;">Neha Sharma</span>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -709,7 +717,7 @@
                                                                     </svg>
                                                                 </div>
                                                                 <p>I was blown away by the attention to detail. The themed decor was a hit with everyone. Definitely recommending to friends!</p>
-                                                                <span class="author__name">Rohit Das</span>
+                                                                <span class="author__name" style="color: #FFD700;">Rohit Das</span>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -738,7 +746,7 @@
                                                                     </svg>
                                                                 </div>
                                                                 <p>Our daughter's birthday was a dream come true. The games, the decor, the food — flawless execution!</p>
-                                                                <span class="author__name">Meera Pillai </span>
+                                                                <span class="author__name" style="color: #FFD700;">Meera Pillai </span>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -767,7 +775,7 @@
                                                                     </svg>
                                                                 </div>
                                                                 <p>A stress-free experience from planning to the last guest leaving. These folks know how to make an event unforgettable.</p>
-                                                                <span class="author__name">Dio Caprio</span>
+                                                                <span class="author__name" style="color: #FFD700;">Dio Caprio</span>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -796,7 +804,7 @@
                                                                     </svg>
                                                                 </div>
                                                                 <p>What impressed me most was how smoothly everything went. The team is talented, friendly, and super organized.</p>
-                                                                <span class="author__name">David Hanson</span>
+                                                                <span class="author__name" style="color: #FFD700;">David Hanson</span>
                                                             </div>
                                                         </div>
                                                     </div>
