--- a/service-02.html
+++ b/service-02.html
@@ -461,16 +461,20 @@
                             <div class="row">
                                 <div class="col-xl-12">
                                     <div class="hero-3__content p-relative">
-                                        <span class="hero-3__subtitle">Since 1988</span>
+                                        <span class="hero-3__subtitle">Since 2020</span>
                                         <h2 class="hero-3__title bd_banner__anim">
                                             <span class="top">Making <span></span></span>
                                             Memories
                                         </h2>
                                         <p class="hero-3__text p-text">
-                                            Party Store is your trusted partner for exceptional event planning and management.
-                                            From corporate galas to private celebrations, we craft unique experiences that leave 
-                                            a lasting impression. Let us bring your vision to life with creativity, precision, 
-                                            and passion.
+                                            We are a seasoned event management team with over five years 
+                                            of expertise in catering, décor, event hosting. Our passion 
+                                            and deep knowledge ensure seamless, unforgettable experiences 
+                                            tailored to your vision. With a proven track record of successful 
+                                            events, we bring a wealth of practical experience and creative 
+                                            solutions to every project. We are dedicated to understanding your 
+                                            unique needs and transforming them into a flawlessly executed and 
+                                            truly memorable occasion.
                                         </p>
                                         <div class="hero-3__btn btn_wrapper">
                                             <a class="c-button btn-moving" href="contact.html">
@@ -500,7 +504,7 @@
                                         <div class="section__subtitle-icon">
                                             <a href="cart.html"><img src="assets/img/shapes/section-title-star.png" alt="image not found"></a>
                                         </div>
-                                        <p class="section__subtitle-text">
+                                        <p class="section__subtitle-text" style="color: #FFD700 !important;">
                                             Our Wedding & Event Plans
                                         </p>
                                     </div>
@@ -514,7 +518,7 @@
                                 <div class="blog__list">
                                     <div class="blog__item-1">
                                         <div class="">
-                                            <a href="cart.html" class="tag">Hindu Wedding</a>
+                                            <a href="cart.html" class="tag" style="color: #FFD700 !important;">Hindu Wedding</a>
                                             <h3 class="blog__item-1-title title-block-2"><a href="cart.html">Traditional 
                                                 ceremonies with vibrant décor, mandap setup, and authentic rituals.</a></h3>
                                             <div class="blog__meta-list">
@@ -535,7 +539,7 @@
                                     </div>
                                     <div class="blog__item-1">
                                         <div class="">
-                                            <a href="cart.html" class="tag">Christian Wedding</a>
+                                            <a href="cart.html" class="tag" style="color: #FFD700 !important;">Christian Wedding</a>
                                             <h3 class="blog__item-1-title title-block-2"><a
                                                     href="cart.html">Elegant church ceremonies, floral 
                                                     setups, and reception planning made perfect.</a></h3>
@@ -557,7 +561,7 @@
                                     </div>
                                     <div class="blog__item-1">
                                         <div class="">
-                                            <a href="cart.html" class="tag">Muslim Wedding</a>
+                                            <a href="cart.html" class="tag" style="color: #FFD700 !important;">Muslim Wedding</a>
                                             <h3 class="blog__item-1-title title-block-2"><a
                                                     href="cart.html">Elegant Nikah arrangements, 
                                                     traditional décor, and exquisite catering options.</a></h3>
@@ -580,7 +584,7 @@
 
                                     <div class="blog__item-1">
                                         <div class="">
-                                            <a href="cart.html" class="tag">Food & Catering</a>
+                                            <a href="cart.html" class="tag" style="color: #FFD700 !important;">Food & Catering</a>
                                             <h3 class="blog__item-1-title title-block-2"><a
                                                     href="cart.html">Delicious menus from 
                                                     traditional cuisines to gourmet experiences 
@@ -604,7 +608,7 @@
 
                                     <div class="blog__item-1">
                                         <div class="">
-                                            <a href="cart.html" class="tag">Stage Design</a>
+                                            <a href="cart.html" class="tag" style="color: #FFD700 !important;">Stage Design</a>
                                             <h3 class="blog__item-1-title title-block-2"><a
                                                     href="cart.html">Custom stage setups, 
                                                     floral backdrops, and lighting designs that create magic.</a></h3>
@@ -652,15 +656,15 @@
                                 <div class="services-area-3-content section-spacing p-relative">
                                     <div class="section__title-3-wrapper section__title-wrapper-services ">
                                         <div class="section__subtitle-3">
-                                            <p class="section__subtitle-text">
+                                            <p class="section__subtitle-text" style="color: #FFD700;">
                                                 what we offer
                                             </p>
                                             <div class="section__subtitle-number">
-                                                <span>02</span>
+                                                <span style="color: #FFD700;">02</span>
                                             </div>
                                         </div>
                                         <h2 class="section__title-main xlarge uppercase mb-45 title-anim">Event
-                                            <span class="font-highlight tpl__theme-color">Plans</span>
+                                            <span class="font-highlight tpl__theme-color" style="color: #FFD700;">Plans</span>
                                         </h2>
                                     </div>
                                     <p class="mb-65">Our event plans are crafted to make every moment unforgettable. 
@@ -690,7 +694,7 @@
                                                     <p>Beautiful mandap setup, traditional rituals, vibrant decor, 
                                                         and authentic Hindu wedding planning for a memorable celebration.</p>
                                                     <div class="area-btn">
-                                                        <a href="cart.html" class="text-btn btn-text">View
+                                                        <a href="cart.html" class="text-btn btn-text" style="color: #FFD700;">View
                                                             Details</a>
                                                     </div>
                                                 </div>
@@ -707,7 +711,7 @@
                                                     <p>Elegant church weddings, white-themed receptions, and complete 
                                                         ceremony coordination tailored for Christian traditions.</p>
                                                     <div class="area-btn">
-                                                        <a href="cart.html" class="text-btn btn-text">View
+                                                        <a href="cart.html" class="text-btn btn-text" style="color: #FFD700;">View
                                                             Details</a>
                                                     </div>
                                                 </div>
@@ -724,7 +728,7 @@
                                                     <p>Specialized in Nikah arrangements, Walima receptions, and 
                                                         Islamic wedding customs with grace and grandeur.</p>
                                                     <div class="area-btn">
-                                                        <a href="cart.html" class="text-btn btn-text">View
+                                                        <a href="cart.html" class="text-btn btn-text" style="color: #FFD700;">View
                                                             Details</a>
                                                     </div>
                                                 </div>
@@ -750,15 +754,15 @@
                                 <div class="choose-area-content">
                                     <div class="section__title-3-wrapper ">
                                         <div class="section__subtitle-3">
-                                            <p class="section__subtitle-text">
+                                            <p class="section__subtitle-text" style="color: #FFD700 !important;">
                                                 event planning
                                             </p>
                                             <div class="section__subtitle-number">
-                                                <span>03</span>
+                                                <span style="color: #FFD700;">03</span>
                                             </div>
                                         </div>
                                         <h2 class="section__title-main xlarge uppercase mb-0 bdFadeRight">Crafting
-                                            <span class="font-highlight tpl__theme-color">unforgettable</span> 
+                                            <span class="font-highlight tpl__theme-color" style="color: #FFD700;">unforgettable</span> 
                                             experiences 
                                         </h2>
                                     </div>
@@ -1074,6 +1078,14 @@
                         </div>
                     </div>
                 </section>
+                <style>
+                    .step-item:hover {
+        background: linear-gradient(to bottom, #FFD700, #B8860B); /* golden gradient */
+        box-shadow: 0 0 20px rgba(255, 215, 0, 0.5);
+        color: #000; /* black text on gold */
+        transition: background-color 0.3s ease, box-shadow 0.3s ease;
+    }
+                </style>
                 <!-- step area end -->
 
                 <!-- title intro area -->
