--- a/contact.html
+++ b/contact.html
@@ -183,11 +183,11 @@
 
     <!-- header area start  -->
     <header>
-        <div id="header-sticky" class="header-main-area">
+        <div id="header-sticky" class="header-main-area is-black">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-xl-12 col-lg-12">
-                        <div class="header-3-main-content-wrapper p-relative">
+                        <div class="header-3-main-content-wrapper is-black p-relative">
                             <div class="header-3-main-left">
                                 <div class="header__logo">
                                     <a href="index.html">
@@ -196,7 +196,7 @@
                                 </div>
                             </div>
                             <div class="header-3-main-right">
-                                <div class="main-menu main-menu d-none d-xl-block">
+                                <div class="main-menu is-white d-none d-xl-block">
                                     <nav id="mobile-menu">
                                         <ul>
                                             <li >
@@ -224,7 +224,7 @@
                                                 <a href="about.html">About us</a>
                                             </li>
                                             <li >
-                                                <a href="service-01.html">Services</a>
+                                                <a href="service-01.html">Service</a>
                                             </li>
                                             <li >
                                                 <a href="service-02.html">Event Plans</a>
@@ -310,7 +310,7 @@
                                                 </ul>
                                             </li>
                                             <li class="has-dropdown">
-                                                <a href="#">Elements</a>
+                                                <a href="javasript:void(0);">Elements</a>
                                                 <ul class="submenu">
                                                     <li><a href="elements-accordion.html">Accordion</a></li>
                                                     <li><a href="elements-blog.html">News</a></li>
@@ -332,7 +332,7 @@
                                         </ul>
                                     </nav>
                                 </div>
-                                <div class="contact-link is-black d-none d-sm-inline-flex">
+                                <div class="contact-link d-none d-sm-inline-flex">
                                     <div class="contact-link__icon">
                                         <span>
                                             <svg width="16" height="22" viewBox="0 0 16 22" fill="none"
@@ -351,11 +351,11 @@
                                     <div class="header-humbager">
                                         <a class="mobile-menu-btn" href="javascript:void(0)">
                                             <div class="bar-icon-3">
-                                                <svg width="40" height="21" viewBox="0 0 40 21" fill="none"
+                                                <svg width="41" height="21" viewBox="0 0 41 21" fill="none"
                                                     xmlns="http://www.w3.org/2000/svg">
-                                                    <rect width="40" height="1" fill="#171717" />
-                                                    <rect y="10" width="40" height="1" fill="#171717" />
-                                                    <rect y="20" width="40" height="1" fill="#171717" />
+                                                    <rect width="41" height="1" fill="white"></rect>
+                                                    <rect y="10" width="41" height="1" fill="white"></rect>
+                                                    <rect y="20" width="41" height="1" fill="white"></rect>
                                                 </svg>
                                             </div>
                                         </a>
