--- a/contact.html
+++ b/contact.html
@@ -344,7 +344,7 @@
                                         </span>
                                     </div>
                                     <div class="contact-link__text">
-                                        <p><a href="tel:+910369201003">+91 0369 201 003</a></p>
+                                        <p><a href="tel:+91XXXXXXXXXX">+91 XXX-XXX-XXXX</a></p>
                                     </div>
                                 </div>
                                 <div class="menu__bar-3 d-xl-none pl-35">
@@ -387,10 +387,10 @@
                                 <div class="contact-content-wrappper">
                                     <div class="section__title-wrapper mb-45">
                                         <span class="section__inner-subtitle">Contact us</span>
-                                        <h2 class="section__title-inner mb-25">Have Questions? <br> Get in Touch!</h2>
-                                        <p>Sed ut perspiciatis, unde omnis iste natus error sit voluptatem accusantium
-                                            doloremque laudantium, totam rem aperiam eaque ipsa, quae ab illo inventore
-                                            veritatis et quasi architecto beatae vitae dicta sunt, explicabo.</p>
+                                        <h2 class="section__title-inner mb-25">Let's Bring Your Vision to Life, Get in Touch!</h2>
+                                        <p>Want to plan the perfect wedding or host an unforgettable event? We’re just a message 
+                                            away.
+                                        </p>
                                     </div>
                                     <div class="contact-info-wrapper">
                                         <div class="contact-info">
@@ -414,7 +414,7 @@
                                             </div>
                                             <div class="contact-info-content">
                                                 <span>Call Us</span>
-                                                <h4><a href="tel:202-555-0100">202-555-0100</a></h4>
+                                                <h4><a href="tel:+91-XXXXXXXXXX">+91-XXXXXXXXXX</a></h4>
                                             </div>
                                         </div>
                                         <div class="contact-info">
@@ -438,7 +438,7 @@
                                             </div>
                                             <div class="contact-info-content">
                                                 <span>Mail Us</span>
-                                                <h4><a href="mailto:support@axilinfo.com">support@axilinfo.com</a></h4>
+                                                <h4><a href="mailto:hello@thepartystore.in">hello@thepartystore.in</a></h4>
                                             </div>
                                         </div>
                                     </div>
@@ -465,21 +465,26 @@
                                             </div>
                                             <div class="col-xxl-12">
                                                 <div class="contact-input">
-                                                    <input type="text" placeholder="Subject">
+                                                    <input type="text" placeholder="Date">
                                                 </div>
                                             </div>
                                             <div class="col-xxl-12">
                                                 <div class="contact-input">
-                                                    <textarea placeholder="Write Comment"></textarea>
+                                                    <input type="text" placeholder="Location">
                                                 </div>
                                             </div>
                                             <div class="col-xxl-12">
+                                                <div class="contact-input">
+                                                    <textarea placeholder="Write Comment/Message"></textarea>
+                                                </div>
+                                            </div>
+                                            <!-- <div class="col-xxl-12">
                                                 <div class="postbox__comment-check mb-40">
                                                     <input class="e-check-input is-black" type="checkbox" id="c-check">
                                                     <label class="e-check-label" for="c-check">I agree that my submitted
                                                         data is being collected and stored. *</label>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <div class="col-xxl-12">
                                                 <div class="contact-btn">
                                                     <button type="submit" class="input-btn"><span class="btn-text">Post
@@ -498,8 +503,7 @@
 
                 <!-- location map area start -->
                 <div class="location-map">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d188910.2277348383!2d-0.264174663336833!3d51.52985941123778!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C%20UK!5e0!3m2!1sen!2sbd!4v1677566276830!5m2!1sen!2sbd"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4016726.9654553295!2d73.49665072194234!3d10.533321615213708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b0812ffd49cf55b%3A0x64bd90fbed387c99!2sKerala!5e0!3m2!1sen!2sin!4v1751872868928!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
                 <!-- location map area end -->
 
@@ -516,7 +520,7 @@
                                         <a href="index.html"><img src="assets/img/logo/pslogo.png"
                                                 alt="img not found"></a>
                                     </div>
-                                    <p class="made-by-text mb-30">Made by Cognetz</p>
+                                    <p class="made-by-text mb-30">Made by <a href="https://cognetz.com" target="_blank">Cognetz</a></p>
                                     <!-- <div class="product__review-thumb mb-40">
                                         <img src="assets/img/projects/product-review-1.png" alt="image not found">
                                         <img src="assets/img/projects/product-review-2.png" alt="image not found">
@@ -551,7 +555,7 @@
                                     <div class="footer__links">
                                         <ul>
                                             <li><a href="services-details.html">Wedding Setup</a></li>
-                                            <li><a href="services-details.html">Outdoor Event</a></li>
+                                            <li><a href="services-details.html">Catering Services</a></li>
                                             <li><a href="services-details.html">Corporate Gathering</a></li>
                                             <li><a href="services-details.html">Birthday Function</a></li>
                                             <!-- <li><a href="services-details.html">Software Solutions</a></li> -->
@@ -616,22 +620,22 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-6">
                                     <div class="address-box mb-40">
-                                        <h4 class="country-name mb-25">Athens</h4>
+                                        <h4 class="country-name mb-25">Kerala</h4>
                                         <div class="address-list">
                                             <ul>
                                                 <li>
-                                                    <a href="https://maps.google.com" target="_blank">33 Zeppou
-                                                        str.GR-16675
-                                                        Glyfada,Greece</a>
+                                                    <a href="https://maps.google.com" target="_blank">Based in Kerala | Available Across South India
+                                                    </a>
                                                 </li>
                                                 <li>
-                                                    <a href="tel:+912111042000">+91 211 10 42 000</a>
+                                                    <a href="tel:+91-XXXXXXXXXX">+91-XXXXXXXXXX
+                                                    </a>
                                                 </li>
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-6">
+                                <!-- <div class="col-lg-3 col-md-6">
                                     <div class="address-box mb-40">
                                         <h4 class="country-name mb-25">United State</h4>
                                         <div class="address-list">
@@ -683,7 +687,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -694,7 +698,7 @@
                         <div class="row">
                             <div class="col-xl-12">
                                 <div class="copyright__text tpl__item-center">
-                                    <p>Copyright © 2024 <a target="_blank"
+                                    <p>Copyright © 2025 <a target="_blank"
                                             href="https://cognetz.com">Cognetz</a></p>
                                 </div>
                             </div>
