--- a/about.html
+++ b/about.html
@@ -349,7 +349,7 @@
                                         </span>
                                     </div>
                                     <div class="contact-link__text">
-                                        <p><a href="tel:+910369201003">+91 0369 201 003</a></p>
+                                        <p><a href="tel:+91XXXXXXXXXX">+91 XXX-XXX-XXXX</a></p>
                                     </div>
                                 </div>
                                 <div class="menu__bar-3 d-xl-none pl-35">
@@ -414,11 +414,12 @@
                                     <div class="about-us-content">
                                         <div class="about-us-text">
                                             <span class="line__subtitle mb-50">Since 2020</span>
-                                            <p>We are a seasoned event management team with over five years of expertise in catering, décor, event hosting. 
-                                                Our passion and deep knowledge ensure seamless, unforgettable experiences tailored to your vision. With a 
-                                                proven track record of successful events, we bring a wealth of practical experience and creative solutions 
-                                                to every project. We are dedicated to understanding your unique needs and transforming them into a flawlessly 
-                                                executed and truly memorable occasion.
+                                            <p>At The Partystore, we believe that every moment deserves to be magical. With years of experience 
+                                                in photography, wedding planning, catering, and event styling, we turn your special days into extraordinary 
+                                                memories. Our team blends tradition with innovation, delivering tailored experiences that reflect your story, 
+                                                style, and soul. <br>
+                                                Whether it's a lavish wedding, an intimate engagement, or a milestone celebration, we’re here to make it 
+                                                perfect — from the first sketch to the final smile.
                                             </p>
                                         </div>
                                         <div class="btn_wrapper">
@@ -568,7 +569,7 @@
                         <div class="row">
                             <div class="col-xl-12">
                                 <div class="section__title-wrapper is-white mb-60">
-                                    <span class="section__inner-subtitle">why we us</span>
+                                    <span class="section__inner-subtitle">why choose us</span>
                                     <h2 class="section__title-inner title-anim">We’re a full-service <span
                                             class="font-highlight">event management team</span> you can rely on</h2>
                                 </div>
@@ -712,7 +713,8 @@
                 <!-- why area end -->
 
                 <!-- brand area start  -->
-                <section class="brand-area section-spacing">
+
+                <!-- <section class="brand-area section-spacing">
                     <div class="container">
                         <h4 class="brand-title text-center p-text mb-75">Trusted by industry-leading organizations
                             including</h4>
@@ -751,7 +753,8 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
+
                 <!-- brand area end  -->
 
             </main>
@@ -766,7 +769,7 @@
                                         <a href="index.html"><img src="assets/img/logo/pslogo.png"
                                                 alt="img not found"></a>
                                     </div>
-                                    <p class="made-by-text mb-30">Made by Cognetz</p>
+                                    <p class="made-by-text mb-30">Made by <a href="https://cognetz.com" target="_blank">Cognetz</a></p>
                                     <!-- <div class="product__review-thumb mb-40">
                                         <img src="assets/img/projects/product-review-1.png" alt="image not found">
                                         <img src="assets/img/projects/product-review-2.png" alt="image not found">
@@ -802,7 +805,7 @@
                                         <ul>
                                             <li><a href="services-details.html">Wedding Setup</a></li>
                                             <li><a href="services-details.html">Outdoor Event</a></li>
-                                            <li><a href="services-details.html">Corporate Gathering</a></li>
+                                            <li><a href="services-details.html">Catering Services</a></li>
                                             <li><a href="services-details.html">Birthday Function</a></li>
                                             <!-- <li><a href="services-details.html">Software Solutions</a></li> -->
                                         </ul>
@@ -866,22 +869,22 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-6">
                                     <div class="address-box mb-40">
-                                        <h4 class="country-name mb-25">Athens</h4>
+                                        <h4 class="country-name mb-25">Kerala</h4>
                                         <div class="address-list">
                                             <ul>
                                                 <li>
-                                                    <a href="https://maps.google.com" target="_blank">33 Zeppou
-                                                        str.GR-16675
-                                                        Glyfada,Greece</a>
+                                                    <a href="https://maps.google.com" target="_blank">Based in Kerala | Available Across South India
+                                                    </a>
                                                 </li>
                                                 <li>
-                                                    <a href="tel:+912111042000">+91 211 10 42 000</a>
+                                                    <a href="tel:+91-XXXXXXXXXX">+91-XXXXXXXXXX
+                                                    </a>
                                                 </li>
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-6">
+                                <!-- <div class="col-lg-3 col-md-6">
                                     <div class="address-box mb-40">
                                         <h4 class="country-name mb-25">United State</h4>
                                         <div class="address-list">
@@ -933,7 +936,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -944,7 +947,7 @@
                         <div class="row">
                             <div class="col-xl-12">
                                 <div class="copyright__text tpl__item-center">
-                                    <p>Copyright © 2024 <a target="_blank"
+                                    <p>Copyright © 2025 <a target="_blank"
                                             href="https://cognetz.com">Cognetz</a></p>
                                 </div>
                             </div>
