--- a/service-02.html
+++ b/service-02.html
@@ -199,7 +199,7 @@
                                             <p>
                                                 <a href="https://maps.google.com
                                                 " target="_blank">
-                                                    Pl. Wolności 7/507, 50-071 Wrocław,<br class="d-xl-none"> India
+                                                    Based in Kerala | Available Across South India,<br class="d-xl-none"> India
                                                 </a>
                                             </p>
                                         </div>
@@ -212,9 +212,8 @@
                                         </div>
                                         <div class="meta-item__text">
                                             <p>
-                                                <a href="mailto:contact.info@gmail.com
-                                                ">
-                                                    contact.info@gmail.com
+                                                <a href="mailto:hello@thepartystore.in" target="_blank">
+                                                    hello@thepartystore.in
                                                 </a>
                                             </p>
                                         </div>
@@ -412,7 +411,7 @@
                                                 </svg>
                                             </div>
                                             <div class="contact-link__text">
-                                                <p><a href="tel:+910369201003">+91 0369 201 003</a></p>
+                                                <p><a href="tel:+91XXXXXXXXXX">+91 XXX-XXX-XXXX</a></p>
                                             </div>
                                         </div>
                                     </div>
@@ -1120,7 +1119,8 @@
                                         <a href="index.html"><img src="assets/img/logo/pslogo.png"
                                                 alt="img not found"></a>
                                     </div>
-                                    <p class="made-by-text mb-30">Made by Cognetz</p>
+                                    <p class="made-by-text mb-30">Made by <a target="_blank"
+                                            href="https://cognetz.com">Cognetz</a></p>
                                     <!-- <div class="product__review-thumb mb-40">
                                         <img src="assets/img/projects/product-review-1.png" alt="image not found">
                                         <img src="assets/img/projects/product-review-2.png" alt="image not found">
@@ -1156,7 +1156,7 @@
                                         <ul>
                                             <li><a href="services-details.html">Wedding Setup</a></li>
                                             <li><a href="services-details.html">Outdoor Event</a></li>
-                                            <li><a href="services-details.html">Corporate Gathering</a></li>
+                                            <li><a href="services-details.html">Catering Services</a></li>
                                             <li><a href="services-details.html">Birthday Function</a></li>
                                             <!-- <li><a href="services-details.html">Software Solutions</a></li> -->
                                         </ul>
@@ -1220,22 +1220,22 @@
                             <div class="row">
                                 <div class="col-lg-3 col-md-6">
                                     <div class="address-box mb-40">
-                                        <h4 class="country-name mb-25">Athens</h4>
+                                        <h4 class="country-name mb-25">Kerala</h4>
                                         <div class="address-list">
                                             <ul>
                                                 <li>
-                                                    <a href="https://maps.google.com" target="_blank">33 Zeppou
-                                                        str.GR-16675
-                                                        Glyfada,Greece</a>
+                                                    <a href="https://maps.google.com" target="_blank">Based in Kerala | Available Across South India
+                                                    </a>
                                                 </li>
                                                 <li>
-                                                    <a href="tel:+912111042000">+91 211 10 42 000</a>
+                                                    <a href="tel:+91-XXXXXXXXXX">+91-XXXXXXXXXX
+                                                    </a>
                                                 </li>
                                             </ul>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-lg-3 col-md-6">
+                                <!-- <div class="col-lg-3 col-md-6">
                                     <div class="address-box mb-40">
                                         <h4 class="country-name mb-25">United State</h4>
                                         <div class="address-list">
@@ -1287,7 +1287,7 @@
                                             </ul>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -1298,7 +1298,7 @@
                         <div class="row">
                             <div class="col-xl-12">
                                 <div class="copyright__text tpl__item-center">
-                                    <p>Copyright © 2024 <a target="_blank"
+                                    <p>Copyright © 2025 <a target="_blank"
                                             href="https://cognetz.com">Cognetz</a></p>
                                 </div>
                             </div>
