--- a/contact.html
+++ b/contact.html
@@ -344,7 +344,7 @@
                                         </span>
                                     </div>
                                     <div class="contact-link__text">
-                                        <p><a href="tel:+91XXXXXXXXXX">+91 XXX-XXX-XXXX</a></p>
+                                        <p><a href="tel:+919961870893">+91 996-187-0893</a></p>
                                     </div>
                                 </div>
                                 <div class="menu__bar-3 d-xl-none pl-35">
@@ -414,7 +414,7 @@
                                             </div>
                                             <div class="contact-info-content">
                                                 <span>Call Us</span>
-                                                <h4><a href="tel:+91-XXXXXXXXXX">+91-XXXXXXXXXX</a></h4>
+                                                <h4><a href="tel:+919961870893">+91-996-187-0893</a></h4>
                                             </div>
                                         </div>
                                         <div class="contact-info">
@@ -628,7 +628,7 @@
                                                     </a>
                                                 </li>
                                                 <li>
-                                                    <a href="tel:+91-XXXXXXXXXX">+91-XXXXXXXXXX
+                                                    <a href="tel:+919961870893">+91-996-187-0893
                                                     </a>
                                                 </li>
                                             </ul>
